# fp-tools

./: .gitignore  .zenodo.json  CITATION.cff  Dockerfile  GUI_PLAN.md  LICENSE  MANUAL.html  MANUAL.md  Makefile  README.md  RELEASE_CHECKLIST.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/manifests/: 10x_pbmc_pseudobulk.tsv  README.md  a549_tasks.tsv  encode_k562_ctcf_smoke.tsv
benchmarks/scripts/: README.md  build_encode_manifest.py  build_genome_feature_tables.py  build_label_overlap_benchmark.py  build_motif_removal_benchmark.py  build_tf_feature_table.py  compute_binary_metrics.py  compute_calibration.py  download_manifest.py  evaluate_methods.py  footprint_from_bam.py  footprint_occupancy_score.py  prepare_10x_pbmc_pseudobulk.py  run_benchmark_pipeline.py  run_engineering_benchmark.py  score_peaks_with_pwm.py  validate_manifests.py
docs/: FUTURE_PLANS.md  reproduce-paper.md  workflow_figure_revision_prompts.md
docs/assets/: fp-tools-pseudobulk-tf-screen.tsv  marker_aggregate_examples.tsv
examples/: README.md
examples/bindetect/: bindetect_html_generator_stylecheck.html
examples/gui_configs/: README.md  atacorrect_batch.yml  atacorrect_single.yml  bindetect_batch_single.yml  bindetect_comparisons_2v2.yml  bindetect_single.yml  footprintscores_batch.yml  footprintscores_single.yml  plotaggregate_batch.yml  plotaggregate_single.yml
examples/plotaggregate_tfbs_dir/: BATF_all.bed
examples/plotaggregate_tfbs_grid/: GATA3_Bcell_bound.bed  RUNX1_Bcell_bound.bed
manuscript/: README.md  code_availability.md  data_availability.md  main.bbl  main.tex  references.bib
manuscript/figures/: denovo_motif_validation.tsv  normalization_effect.tsv  supp_pseudobulk_footprint_like.tsv  supp_pseudobulk_tf_aggregates.tsv  supp_pseudobulk_tf_screen.tsv
manuscript/scripts/: README.md  figure_style.py  plot_benchmark_panels.py  plot_calibration_panel.py  plot_calibration_panels.py  plot_denovo_motif_validation.py  plot_marker_aggregate_examples.py  plot_multiscale_npz.py  plot_normalization_effect.py  plot_pseudobulk_tf_aggregates.py  prepare_biomedinformatics_template.py  prepare_pseudobulk_motif_sites.py
manuscript/tables/: analysis_parameters.tsv  software_versions.tsv
manuscript/templates/: biomedinformatics-template.dot
paper/: BioMedInformatics  README.md
paper/BioMedInformatics_manuscript/: cover_letter.md  data_availability.md  main.aux  main.bbl  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
paper/manuscript/: code_availability.md  cover_letter.md  data_availability.md  main.bbl  main.tex  references.bib
paper/manuscript/figures/: normalization_effect.tsv  supp_pseudobulk_footprint_like.tsv  supp_pseudobulk_tf_aggregates.tsv
paper/scripts/: README.md  plot_benchmark_panels.py  plot_calibration_panels.py  plot_method_comparison.py  plot_method_comparison_multi.py  plot_multiscale_npz.py  plot_normalization_effect.py  plot_pseudobulk_tf_aggregates.py  prepare_biomedinformatics_template.py
scripts/: build_manual_pdf.py  build_release.sh  run_buenrostro_2x2_atac_replicate_demo.sh  run_buenrostro_denovo_motif_validation.sh
src/fp_tools/: cli.py  cli_batch.py  cli_gui.py  cli_plotaggregate.py  cli_scorebigwig.py  gui_app.py  gui_config.py  gui_forms.py  gui_jobs.py  parsers.py
src/fp_tools/tools/: atacorrect.py  atacorrect_functions.py  bindetect.py  bindetect_functions.py  bindetect_skew_report.py  (+12 more)
test_data/: BATF_Bcell_bound.bed  BATF_Bcell_unbound.bed  BATF_Tcell_bound.bed  BATF_Tcell_unbound.bed  Bcell_uncorrected.bw  IRF1_Bcell_unbound.bed  IRF1_Tcell_bound.bed  IRF1_Tcell_unbound.bed  IRF1_all.bed  JASPAR2026_CORE_vertebrates_non-redundant_pfms_jaspar.txt  Tcell_bindetect_results.txt  Tcell_uncorrected.bw  binding_sites.bed  blacklist.bed  merged_peaks.bed  merged_peaks_annotated.bed  merged_peaks_annotated_header.txt  motif2gene_mapping.txt  motifs.jaspar  plot_regions.bed
test_data/annotated_tfbs/: ATF7_Bcell_bound.bed  Ar_Bcell_bound.bed  Arnt_Bcell_bound.bed  BACH2_Bcell_bound.bed  BHLHE40_Bcell_bound.bed  CEBPB_Bcell_bound.bed  CREB1_Bcell_bound.bed  CREM_Bcell_bound.bed  CTCF_Bcell_bound.bed  CUX1_Bcell_bound.bed  E2F1_Bcell_bound.bed  E2F4_Bcell_bound.bed  EBF1_Bcell_bound.bed  ELF1_Bcell_bound.bed  ELK1_Bcell_bound.bed  EN1_Bcell_bound.bed  ESRRA_Bcell_bound.bed  ETS1_Bcell_bound.bed  ETV6_Bcell_bound.bed  FOXA2_Bcell_bound.bed  FOXC1_Bcell_bound.bed  FOXD1_Bcell_bound.bed  FOXF2_Bcell_bound.bed  FOXI1_Bcell_bound.bed  FOXL1_Bcell_bound.bed  Foxd3_Bcell_bound.bed  Foxq1_Bcell_bound.bed  GABPA_Bcell_bound.bed  GATA1_Bcell_bound.bed  GATA2_Bcell_bound.bed  GFI1_Bcell_bound.bed  HLF_Bcell_bound.bed  HNF1A_Bcell_bound.bed  HSF1_Bcell_bound.bed  IRF1_Bcell_bound.bed  IRF4_Bcell_bound.bed  JUNB_Bcell_bound.bed  KLF4_Bcell_bound.bed  LEF1_Bcell_bound.bed  MAFK_Bcell_bound.bed  (+40 more)
test_data/individual_motifs/: MA0002.2.meme  MA0003.4.meme  MA0009.2.meme  MA0014.3.meme  MA0017.2.meme  MA0025.2.meme  MA0029.1.meme  MA0048.2.meme  MA0052.4.meme  MA0058.3.meme  MA0060.3.meme  MA0083.3.meme  MA0088.2.meme  MA0093.3.meme  MA0095.2.meme  MA0100.3.meme  MA0139.1.jaspar  MA0154.4.jaspar  MA0464.2.jaspar  MA0466.2.jaspar  MA0470.2.jaspar  MA0473.3.jaspar  MA0486.2.jaspar  MA0490.2.jaspar  MA0592.3.jaspar  MA0609.2.jaspar  MA0645.1.jaspar  MA0754.1.jaspar  MA0834.1.jaspar  MA1101.2.jaspar  MA1419.1.jaspar  MA1634.1.jaspar
tests/: test_benchmark_scripts.py  test_bindetect_interactive_html.py  test_bindetect_replicate_report.py  test_call_footprints_candidates.py  test_candidates.py  test_cli_and_config_smoke.py  test_cli_golden_regressions.py  test_core_handling.py  test_docs_contract.py  test_fixture_regressions.py  test_footprint_competition.py  test_motif_discovery.py  test_multiscale_scoring.py  test_normalization.py  test_paper_assets.py  test_plot_aggregate_batch.py  test_plotaggregate_normalization.py  test_progress_logging.py  test_pseudobulk.py  test_public_api_aliases.py  test_release_metadata.py  test_rerank.py  test_tfbs_features.py  test_tfbs_model.py  test_variants.py
(+13 files in other folders)
